--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
    <ol></ol> 
-   <!-- <input id="input1" type="text" placeholder="from 100"> 
-   <input id="input2" type="text" placeholder="to 200">  -->
-   <input id="input3" type="text" placeholder="введите название продукта">
+   <input id="input1" type="text" placeholder="from 100"> 
+   <input id="input2" type="text" placeholder="to 200"> 
+   <input id="input3" type="text" placeholder="поиск товара">
+   <button id="btn">search</button>
+   <input size="40" id="input4" type="text" placeholder="введите название продукта для удаления">
    <script src="script.js"></script>
 </body>
 </html>
